# Expense-Tracker

./: .dockerignore  .env.example  .gitignore  DATA_FORMAT_SPECIFICATION.md  Dockerfile  README.md  ape-config.yaml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/pages/: 1_Dashboard.py  2_Holdings.py  3_Upload.py  4_Trends.py  5_Export.py  6_Crypto.py
scripts/: generate_sample_data.py
src/: __init__.py
src/database/: models.py  repository.py
src/exports/: __init__.py  excel_exporter.py
src/parsers/: __init__.py  mutual_funds.py  stocks.py  us_stocks.py
src/services/: benchmarks.py  crypto.py  portfolio.py  pricing.py
