[project]
name = "investment-tracker-v2"
version = "0.1.0"
description = "Investment portfolio tracker with Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "yfinance>=0.2.36",
    "plotly>=5.18.0",
    "sqlalchemy>=2.0.0",
    "gspread>=6.0.0",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
crypto = [
    "crypto-portfolio-tracker @ git+https://github.com/Ankvik-Tech-Labs/Crypto-portfolio-tracker.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
